--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,13 +42,15 @@
     "lucide-react": "^0.453.0",
     "pdfjs-dist": "^5.4.394",
     "pusher-js": "^8.4.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.2.4",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@animaapp/vite-plugin-screen-graph": "^0.1.5",
